# app-auditor

./: .gitignore  README.md  pyproject.toml
app_auditor/: cli.py  github_auditor.py
examples/: supabase-audit.txt  vercel-audit.txt
src/: __init__.py  website_auditor.py
src/app_auditor/: github_auditor.py
tests/: test_auditors.py
