[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-auditor"
version = "0.1.0"
description = "Detect tech stack and production-readiness issues from a live URL or GitHub repo. Zero config, one command."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["audit", "stack-detection", "github", "production", "devtools", "cli"]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "responses>=0.25.0"]

[project.scripts]
app-audit = "app_auditor.cli:main"

[tool.hatch.build.targets.wheel.sources]
"src" = "app_auditor"

[tool.pytest.ini_options]
testpaths = ["tests"]
